Refactored to use internal packages\\\\\\\

--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -171,33 +171,41 @@
 					title = "",
 				} = c;
 
-				const { value: formValues } = await Swal.fire({
+				const { value: result } = await Swal.fire({
 					title: title,
 					html: msg,
 					backdrop: false,
 					showCancelButton: true,
 					willOpen: () => {
-						const elem = document.getElementById('reservation-dates-modal')
-						const rp = new DateRangePicker(elem, {
-							format: 'dd-mm-yyyy',
-							showOnFocus: true,
-						})
+						if (c.willOpen !== undefined) {
+							c.willOpen();
+						}
 					},
 					focusConfirm: false,
 					preConfirm: () => {
-						return [
-							document.getElementById('start').value,
-							document.getElementById('end').value
-						]
+						if (c.preConfirm !== undefined) {
+							c.preConfirm();
+						}
 					},
 					didOpen: () => {
-						document.getElementById('start').removeAttribute('disabled');
-						document.getElementById('end').removeAttribute('disabled')
+						if (c.didOpen !== undefined) {
+							c.didOpen();
+						}
 					}
 				})
 
-				if (formValues) {
-					Swal.fire(JSON.stringify(formValues))
+				if (result) {
+					if (result.dismiss !== Swal.DismissReason.cancel) {
+						if (result !== "") {
+							if (c.callback !== undefined) {
+								c.callback(result)
+							}
+						} else {
+							c.callback(false)
+						}
+					} else {
+						c.callback(false)
+					}
 				}
 
 			}
