--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -46,7 +46,43 @@
 				</div>
 			</form>
 			`
-        alert.custom({ msg: html, title: "Choose your dates" })
+        alert.custom({
+            msg: html,
+            title: "Choose your dates",
+            willOpen: () => {
+                const elem = document.getElementById('reservation-dates-modal')
+                const rp = new DateRangePicker(elem, {
+                    format: 'dd-mm-yyyy',
+                    showOnFocus: true,
+                })
+            },
+            didOpen: () => {
+                document.getElementById('start').removeAttribute('disabled');
+                document.getElementById('end').removeAttribute('disabled')
+            },
+            preConfirm: () => {
+                return [
+                    document.getElementById('start').value,
+                    document.getElementById('end').value
+                ]
+            },
+            callback: function (result) {
+                console.log("called");
+
+                const form = document.getElementById("check-availability-form");
+                const formData = new FormData(form);
+                formData.append("csrf_token", "{{.CSRFToken}}")
+
+                fetch('/search-availability-json', {
+                    method: "post",
+                    body: formData,
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data)
+                    })
+            }
+        })
     })
 </script>
 {{end}}
