--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,27 +4,71 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="text-center mt-4">Make Resrvation</h1>
-                <form method="post" action="" class="needs-validation" novalidate>
+                <h1 class="text-center mt-4">Make Reservation</h1>
+
+                {{$res := index .Data "reservation"}}
+
+                <form method="post" action="" class="needs-validation-old" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
 
                     <div class="form-group mt-5">
                         <label for="first_name">First Name:</label>
-                        <input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "first_name"}}
+                            <label class="text-danger" for="first_name">{{.}}</label>
+                        {{end}}
+                        <input type="text"
+                               name="first_name"
+                               id="first_name"
+                               class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}"
+                               required
+                               autocomplete="off"
+                               value="{{$res.FirstName}}"
+                        >
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mt-2">
                         <label for="last_name">Last Name:</label>
-                        <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "last_name"}}
+                            <label class="text-danger" for="last_name">{{.}}</label>
+                        {{end}}
+                        <input type="text"
+                               name="last_name"
+                               id="last_name"
+                               class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}"
+                               required
+                               autocomplete="off"
+                               value="{{$res.LastName}}"
+                        >
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mt-2">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "email"}}
+                            <label class="text-danger" for="email">{{.}}</label>
+                        {{end}}
+                        <input type="email"
+                               name="email"
+                               id="email"
+                               class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}"
+                               required
+                               autocomplete="off"
+                               value="{{$res.Email}}"
+                        >
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mt-2">
                         <label for="phone">Phone Number:</label>
-                        <input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+                        {{with .Form.Errors.Get "phone"}}
+                            <label class="text-danger" for="phone">{{.}}</label>
+                        {{end}}
+                        <input type="text"
+                               name="phone"
+                               id="phone"
+                               class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}"
+                               required
+                               autocomplete="off"
+                               value="{{$res.Phone}}"
+                        >
                     </div>
 
                     <hr>
