Implemented make-reservation form

--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -4,8 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>This is about page</h1>
-                </p>
+                <h1 class="mt-5">This is about page</h1>
             </div>
         </div>
     </div>
