--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -115,6 +115,18 @@
 			})
 		}
 
+		{{with .Error}}
+			notify("{{.}}", "error")
+		{{end}}
+
+		{{with .Flash}}
+		notify("{{.}}", "success")
+		{{end}}
+
+		{{with .Warning}}
+		notify("{{.}}", "warning")
+		{{end}}
+
 		function Prompt() {
 			const toast = function (c) {
 				const {
